--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Touch Counter</string>
+    <string name="accessibility_service_name">my accessibility service</string>
+    <string name="accessibility_service_description">des</string>
 </resources>
